fix: gradient at footer on mobile

--- a/src/components/sections/Footer/style.module.scss
+++ b/src/components/sections/Footer/style.module.scss
@@ -59,7 +59,7 @@
       height: 200px;
       right: 0;
       left: 0;
-      background: linear-gradient(180deg, rgba(11, 11, 12, 0) 0%, #0B0B0C 65.94%);
+      background: linear-gradient(180deg, rgba(11, 11, 12, 0) 0%, #000000 65.94%);
     }
   }
 }
